Fix documentation nav spacing.

--- a/css/main.css
+++ b/css/main.css
@@ -235,12 +235,12 @@ a:visited { color: #205caa; }
 }
 
 .content-container {
-  max-width: 960px;
+  max-width: 700px;
   float: right;
 }
 
 .left-nav {
-  max-width: 150px;
+  max-width: 200px;
   float: left;
 }
 
